--- a/g2.css
+++ b/g2.css
@@ -17,3 +17,22 @@ header {
 header {
 	background-image : url(img/header.jpg);
 }
+footer {
+	bottom           : 0px;
+	margin-top       : 2px;
+	margin-bottom    : 0px;
+	color            : #B200FF;
+	border-top       : 2px solid silver;
+	background-image : url(img/i.jpg);
+	font-size        : 20px;
+}
+
+body {
+	width             : 100%;
+	height            : 100%;
+	color             : #003AB5;
+	background-image  : url("img/background.jpg");
+	background-repeat : round;
+	font-family       : "Bodoni";
+	font-size         : 1em;
+
