--- a/g2.css
+++ b/g2.css
@@ -15,7 +15,7 @@ header {
 	border-radius : 5px;
 }
 header {
-	background-image : url(img/header.jpg);
+	background-image : url(img/header1.jpg);
 }
 footer {
 	bottom           : 0px;
