--- a/g2.css
+++ b/g2.css
@@ -30,7 +30,7 @@ footer {
 body {
 	width             : 100%;
 	height            : 100%;
-	color             : #003AB5;
+	color             : #612580;
 	background-image  : url("img/background.jpg");
 	background-repeat : round;
 	font-family       : "Bodoni";
