--- a/g2.css
+++ b/g2.css
@@ -16,6 +16,8 @@ header {
 }
 header {
 	background-image : url(img/header1.jpg);
+	background-repeat: no-repeat;
+	position:fixed;
 }
 footer {
 	bottom           : 0px;
@@ -30,7 +32,7 @@ footer {
 body {
 	width             : 100%;
 	height            : 100%;
-	color             : #612580;
+	color             : #EEEEEE;
 	background-image  : url("img/background.jpg");
 	background-repeat : round;
 	font-family       : "Bodoni";
@@ -38,6 +40,7 @@ body {
 }
 
 article {
+	float:left;
 	width        : 30%;
 	padding-left : 2%;
 }
