--- a/style.css
+++ b/style.css
@@ -4,19 +4,22 @@ body
 	min-width:100%;
 	margin:0;
 	padding:0;
+	float: left;
 }
 header
 {
-	background-image:url(i.jpg);
-	padding:0.1em;
+	float: fixed;
+	background:url(i.jpg),rgba(255,255,255,0.1);
+	background-blend-mode: color;
+	padding:3em;
 	border:solid #FF6D68 0.1em;
 	border-radius:0.5em;
 }
 header h1
 {
 	text-align:center;
-	font-size:42px;
-	color:#6100FF;
+	font-size:56px;
+	color:#4325FF;
 	
 }
 
@@ -30,7 +33,7 @@ h2
 }
 article
 {
-	min-width:calc:(100% - 20px);
+	width: 30%;
 	margin:10px;
 	background-color:rgba(0,221,255,0.6);
 	border:solid silver 2px;
@@ -46,22 +49,18 @@ h3
 img
 {
 	width:auto\9;
-	max-width:300px;
+	max-width:90%;
 	height:auto;
 	border-radius:20px;
 	float:left;
-	margin:10px;
+	margin:5px;
 }
 p
 {
 	text-indent:20px;
-	font-size:22px;
-	padding:5px;
+	font-size:25px;
+	padding:2px;
 	color:rgba(0,38,255,1);
-}
-body
-{
-	background-image:url(bgi.jpg);
 }
 a
 {
@@ -91,3 +90,77 @@ h4
 	color:#8300FF;
 	font-size:20px;
 }
+div#d1
+{
+	margin-left: 1%;
+	margin-top: 1em;
+	padding-bottom: 20em;
+	background :url(background.png), rgba(255,255,255,0.3);
+	background-blend-mode: color;
+	background-repeat:repeat-y;
+	min-height: 100%;
+	float:left;
+	border:0.2em solid silver; 
+	border-radius: 10px;
+	min-width: 99%;
+}
+
+div#d2
+{
+	margin-left: 1%;
+	margin-top: 1em;
+	padding-bottom: 1em;
+	background :url(background.png), rgba(255,255,255,0.8);
+	background-blend-mode: color;
+	background-repeat:repeat-y;
+	min-height: 10%;
+	float:left;
+	border:0.2em solid silver; 
+	border-radius: 10px;
+	min-width: 98%;
+}
+
+img:hover{
+ -webkit-transform: scale(1.5);
+ -moz-transform: scale(1.5);
+ -o-transform: scale(1.5);
+ opacity:0.95;
+ }
+ img {
+	opacity: 0.5;
+ -moz-transition: all 1s ease-out;
+ -o-transition: all 1s ease-out;
+ -webkit-transition: all 1s ease-out;
+ }
+ div.r{
+	margin: 2%;
+	padding-bottom: 2em;
+	min-height: 10%;
+	float:left;
+	border:0.3em solid silver; 
+	border-radius: 10px;
+	min-width: 95%;
+	 background:#778899, opacity:0.8;
+	 
+	 
+ }
+ img.i1
+ {
+	 max-height:40em;
+	 opacity: 0.9;
+	 
+	 
+	 
+	 
+ }
+ img.i1:hover{
+ -webkit-transform: scale(1.4);
+ -moz-transform: scale(1.4);
+ -o-transform: scale(1.4);
+ opacity:1;
+ }
+ div.desc{
+	 float: left;
+	 
+	 
+ }
