--- a/s2/style.css
+++ b/s2/style.css
@@ -18,8 +18,52 @@ header
 header h1
 {
 	text-align:center;
-	font-size:56px;
-	color:#4325FF;
+	font-family: Arial;
+	font-size: 56px;
+	font-weight: bold;
+	color: #4325FF;
+	text-shadow: 
+		-0   -4px 1px #000000,
+		 0   -4px 1px #000000,
+		-0    4px 1px #000000,
+		 0    4px 1px #000000,
+		-4px -0   1px #000000,
+		 4px -0   1px #000000,
+		-4px  0   1px #000000,
+		 4px  0   1px #000000,
+		-1px -4px 1px #000000,
+		 1px -4px 1px #000000,
+		-1px  4px 1px #000000,
+		 1px  4px 1px #000000,
+		-4px -1px 1px #000000,
+		 4px -1px 1px #000000,
+		-4px  1px 1px #000000,
+		 4px  1px 1px #000000,
+		-2px -4px 1px #000000,
+		 2px -4px 1px #000000,
+		-2px  4px 1px #000000,
+		 2px  4px 1px #000000,
+		-4px -2px 1px #000000,
+		 4px -2px 1px #000000,
+		-4px  2px 1px #000000,
+		 4px  2px 1px #000000,
+		-3px -4px 1px #000000,
+		 3px -4px 1px #000000,
+		-3px  4px 1px #000000,
+		 3px  4px 1px #000000,
+		-4px -3px 1px #000000,
+		 4px -3px 1px #000000,
+		-4px  3px 1px #000000,
+		 4px  3px 1px #000000,
+		-4px -4px 1px #000000,
+		 4px -4px 1px #000000,
+		-4px  4px 1px #000000,
+		 4px  4px 1px #000000,
+		-4px -4px 1px #000000,
+		 4px -4px 1px #000000,
+		-4px  4px 1px #000000,
+		 4px  4px 1px #000000;
+}
 	
 }
 
