--- a/s2/style.css
+++ b/s2/style.css
@@ -18,51 +18,67 @@ header
 header h1
 {
 	text-align:center;
-	font-family: Arial;
-	font-size: 56px;
-	font-weight: bold;
-	color: #4325FF;
-	text-shadow: 
-		-0   -4px 1px #000000,
-		 0   -4px 1px #000000,
-		-0    4px 1px #000000,
-		 0    4px 1px #000000,
-		-4px -0   1px #000000,
-		 4px -0   1px #000000,
-		-4px  0   1px #000000,
-		 4px  0   1px #000000,
-		-1px -4px 1px #000000,
-		 1px -4px 1px #000000,
-		-1px  4px 1px #000000,
-		 1px  4px 1px #000000,
-		-4px -1px 1px #000000,
-		 4px -1px 1px #000000,
-		-4px  1px 1px #000000,
-		 4px  1px 1px #000000,
-		-2px -4px 1px #000000,
-		 2px -4px 1px #000000,
-		-2px  4px 1px #000000,
-		 2px  4px 1px #000000,
-		-4px -2px 1px #000000,
-		 4px -2px 1px #000000,
-		-4px  2px 1px #000000,
-		 4px  2px 1px #000000,
-		-3px -4px 1px #000000,
-		 3px -4px 1px #000000,
-		-3px  4px 1px #000000,
-		 3px  4px 1px #000000,
-		-4px -3px 1px #000000,
-		 4px -3px 1px #000000,
-		-4px  3px 1px #000000,
-		 4px  3px 1px #000000,
-		-4px -4px 1px #000000,
-		 4px -4px 1px #000000,
-		-4px  4px 1px #000000,
-		 4px  4px 1px #000000,
-		-4px -4px 1px #000000,
-		 4px -4px 1px #000000,
-		-4px  4px 1px #000000,
-		 4px  4px 1px #000000;
+	font-family: Helvetica; 
+font-size: 56px; 
+font-weight: bold; 
+color: #EDB715; 
+text-shadow: 
+-0 -6px 1px #1D382B, 
+0 -6px 1px #1D382B, 
+-0 6px 1px #1D382B, 
+0 6px 1px #1D382B, 
+-6px -0 1px #1D382B, 
+6px -0 1px #1D382B, 
+-6px 0 1px #1D382B, 
+6px 0 1px #1D382B, 
+-1px -6px 1px #1D382B, 
+1px -6px 1px #1D382B, 
+-1px 6px 1px #1D382B, 
+1px 6px 1px #1D382B, 
+-6px -1px 1px #1D382B, 
+6px -1px 1px #1D382B, 
+-6px 1px 1px #1D382B, 
+6px 1px 1px #1D382B, 
+-2px -6px 1px #1D382B, 
+2px -6px 1px #1D382B, 
+-2px 6px 1px #1D382B, 
+2px 6px 1px #1D382B, 
+-6px -2px 1px #1D382B, 
+6px -2px 1px #1D382B, 
+-6px 2px 1px #1D382B, 
+6px 2px 1px #1D382B, 
+-3px -6px 1px #1D382B, 
+3px -6px 1px #1D382B, 
+-3px 6px 1px #1D382B, 
+3px 6px 1px #1D382B, 
+-6px -3px 1px #1D382B, 
+6px -3px 1px #1D382B, 
+-6px 3px 1px #1D382B, 
+6px 3px 1px #1D382B, 
+-4px -6px 1px #1D382B, 
+4px -6px 1px #1D382B, 
+-4px 6px 1px #1D382B, 
+4px 6px 1px #1D382B, 
+-6px -4px 1px #1D382B, 
+6px -4px 1px #1D382B, 
+-6px 4px 1px #1D382B, 
+6px 4px 1px #1D382B, 
+-5px -6px 1px #1D382B, 
+5px -6px 1px #1D382B, 
+-5px 6px 1px #1D382B, 
+5px 6px 1px #1D382B, 
+-6px -5px 1px #1D382B, 
+6px -5px 1px #1D382B, 
+-6px 5px 1px #1D382B, 
+6px 5px 1px #1D382B, 
+-6px -6px 1px #1D382B, 
+6px -6px 1px #1D382B, 
+-6px 6px 1px #1D382B, 
+6px 6px 1px #1D382B, 
+-6px -6px 1px #1D382B, 
+6px -6px 1px #1D382B, 
+-6px 6px 1px #1D382B, 
+6px 6px 1px #1D382B; 
 }
 
 h2
