--- a/s2/style.css
+++ b/s2/style.css
@@ -18,67 +18,9 @@ header
 header h1
 {
 	text-align:center;
-	font-family: Helvetica; 
-font-size: 56px; 
-font-weight: bold; 
-color: #EDB715; 
-text-shadow: 
--0 -6px 1px #1D382B, 
-0 -6px 1px #1D382B, 
--0 6px 1px #1D382B, 
-0 6px 1px #1D382B, 
--6px -0 1px #1D382B, 
-6px -0 1px #1D382B, 
--6px 0 1px #1D382B, 
-6px 0 1px #1D382B, 
--1px -6px 1px #1D382B, 
-1px -6px 1px #1D382B, 
--1px 6px 1px #1D382B, 
-1px 6px 1px #1D382B, 
--6px -1px 1px #1D382B, 
-6px -1px 1px #1D382B, 
--6px 1px 1px #1D382B, 
-6px 1px 1px #1D382B, 
--2px -6px 1px #1D382B, 
-2px -6px 1px #1D382B, 
--2px 6px 1px #1D382B, 
-2px 6px 1px #1D382B, 
--6px -2px 1px #1D382B, 
-6px -2px 1px #1D382B, 
--6px 2px 1px #1D382B, 
-6px 2px 1px #1D382B, 
--3px -6px 1px #1D382B, 
-3px -6px 1px #1D382B, 
--3px 6px 1px #1D382B, 
-3px 6px 1px #1D382B, 
--6px -3px 1px #1D382B, 
-6px -3px 1px #1D382B, 
--6px 3px 1px #1D382B, 
-6px 3px 1px #1D382B, 
--4px -6px 1px #1D382B, 
-4px -6px 1px #1D382B, 
--4px 6px 1px #1D382B, 
-4px 6px 1px #1D382B, 
--6px -4px 1px #1D382B, 
-6px -4px 1px #1D382B, 
--6px 4px 1px #1D382B, 
-6px 4px 1px #1D382B, 
--5px -6px 1px #1D382B, 
-5px -6px 1px #1D382B, 
--5px 6px 1px #1D382B, 
-5px 6px 1px #1D382B, 
--6px -5px 1px #1D382B, 
-6px -5px 1px #1D382B, 
--6px 5px 1px #1D382B, 
-6px 5px 1px #1D382B, 
--6px -6px 1px #1D382B, 
-6px -6px 1px #1D382B, 
--6px 6px 1px #1D382B, 
-6px 6px 1px #1D382B, 
--6px -6px 1px #1D382B, 
-6px -6px 1px #1D382B, 
--6px 6px 1px #1D382B, 
-6px 6px 1px #1D382B; 
+	color: white;
+	font-size: 50px;
+  text-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white, 0 0 20px #16E2E2 , 0 0 35px #16E2E2 , 0 0 40px #16E2E2 , 0 0 50px #16E2E2 , 0 0 75px #16E2E2 ;
 }
 
 h2
