--- a/style.css
+++ b/style.css
@@ -173,3 +173,29 @@ img:hover{
 	 max-width: 58%;
 	 
  }
+ 
+ input.in
+ {
+	 margin:0.4em;
+	 padding:0.4em;
+	 border-radius:1em;
+	 float:left;
+	 font-size:16px;
+	 width:70%;
+	 text-align:center;
+ }
+ input.button
+ {
+	 
+	 margin:0.4em;
+	 padding:0.4em;
+	 border-radius:1em;	 
+	 float:left;
+	 font-size:16px;
+	 
+ }
+ form
+ {
+	 float:left;
+	 
+ }
