--- a/geo_exam/style.css
+++ b/geo_exam/style.css
@@ -43,8 +43,8 @@ div.main_d
 	float:left;
 	margin:1%;
 	padding:1%;
-	padding-bottom:1em;
-	height:30em;
+	margin-bottom:2em;
+	height:20em;
 	width:95.5%;
 	border: solid silver 3px;
 	border-radius:1em;
