--- a/geo_exam/style.css
+++ b/geo_exam/style.css
@@ -52,6 +52,10 @@ div.main_d
 	
 	overflow:auto;
 }
+@media handheld div.main_d
+{
+	margin-bottom:8em;	
+}
 p
 {
 	color:rgba(50,50,50,1);
@@ -59,6 +63,10 @@ p
 	text-indent: 30px;
 	font-style: italic;
 	text-shadow: 0.4px 0.4px 0.4px rgba(0,0,0,1);
+}
+@media handheld p
+{
+	font-size:0.8em;
 }
 h2
 {
