--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ h3
 img
 {
 	width:auto\9;
-	max-width:90%;
-	height:auto;
+	max-width:90%; 
+	height:15em;
 	border-radius:20px;
 	float:left;
 	margin:5px;
