--- a/s1/style.css
+++ b/s1/style.css
@@ -17,12 +17,15 @@ body
 }
 header
 {
-	float: fixed;
+	z-index: 1000;
+	position:fixed;
 	background:url(i.jpg),rgba(255,255,255,0.1);
 	background-blend-mode: color;
-	padding:3em;
+	padding:-1em;
 	border:solid #FF6D68 0.1em;
 	border-radius:0.5em;
+	width:100%;
+	height:8em;
 }
 header h1
 {
@@ -106,6 +109,7 @@ h4
 }
 div#d1
 {
+	padding-top:8em;
 	margin-left: 1%;
 	margin-top: 1em;
 	padding-bottom: 20em;
